http://ifdefined.com/readme.html#upgrading

-----------------------------------------------------------------------
Version 2.9.4   10/xx/2008 
-----------------------------------------------------------------------

* Fixed bug where SMTP servers were rejecting emails because of empty
CC field.

* Fixed bug were adding an attachment failed because of null content
type.



ticker?

email rfc thing?

I recently started seeing "object reference" exceptions when uploading some
files.  I store my files in the DB and all the directory permissions were good.
Nothing in the code itself had changed from when it worked to when it did not.
What I tracked it down to was the following:

On line 319 of bug.cs, the value effective_content_type was a NULL reference,
which caused the Replace() to fail.

I made the following change and it all works fine:

sql = sql.Replace("$ct", effective_content_type != null
? effective_content_type.Replace("'", "''") : string.Empty);



I recently started seeing "object reference" exceptions when uploading some
files.  I store my files in the DB and all the directory permissions were good.
Nothing in the code itself had changed from when it worked to when it did not.
What I tracked it down to was the following:

On line 319 of bug.cs, the value effective_content_type was a NULL reference,
which caused the Replace() to fail.

I made the following change and it all works fine:

sql = sql.Replace("$ct", effective_content_type != null
? effective_content_type.Replace("'", "''") : string.Empty);

Tony



-----------------------------------------------------------------------
Version 2.9.3   10/05/2008 
-----------------------------------------------------------------------

To upgrade to this version, change your Web.config from this:

	<assemblies>
		<add assembly="System.DirectoryServices.Protocols, 
			Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
	</assemblies>

	to this, adding the additional assembly reference:
