@@ -872,8 +872,10 @@ Don't call us, we'll call you."/>
 			the $SEEN magic word in your query as explained in edit_query.aspx
 		-->
 		<add key="EnableSeen" value="0" />
-				
-		
+
+
+<add key="EnableWhatsNewPage" value="1" />
+<add key="WhatsNewPageIntervalInSeconds" value="1" />
 		
 		
 <!--
